tests/negative/semantic/for_init_string/input.ci
void main() {
    for (int i = "x"; i < 3; i++) { print(toString(i) + "\n"); }
}
